<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardCornerRadius="4dp"
    cardview:cardElevation="@dimen/card_default_elevation"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/title_layout"
            android:padding="5dp">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:layout_below="@+id/item_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/title_layout"
            android:baselineAligned="false"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/item_quantity_lbl"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/txt_quantity"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:background="@color/colorGreen"
                android:id="@+id/item_quantity_action_layout"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/item_quantity_lbl"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_height="40dp">

                    <TextView
                        android:id="@+id/remove_item"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/round_text_remove_item"
                        android:gravity="center"
                        android:text="@string/symbol_remove_item"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/item_quantity"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/default_item_value"
                        android:textColor="@android:color/background_dark"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/add_item"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/round_text_add_item"
                        android:gravity="center"
                        android:text="@string/symbol_add_item"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/item_quantity_action_layout"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/item_update_cart_product"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/btn_round_default"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_update" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/item_remove_cart_product"
                        android:layout_width="match_parent"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_delete_holo_dark"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingStart="30dp"
                        android:paddingEnd="0dp"
                        android:background="@drawable/btn_round_danger"
                        android:text="@string/txt_remove" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>