<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="9.2"
        android:orientation="vertical"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/billing_address_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/lbl_billing_address"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:id="@+id/billing_address"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/shipping_address_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginBottom="3dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/lbl_shipping_address"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:id="@+id/shipping_address"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.8"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_back"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@color/DarkGray"
                    android:id="@+id/btn_back" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_proceed"
                    android:textColor="@color/white"
                    android:background="@color/colorGreen"
                    android:id="@+id/btn_proceed" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>